<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/options_header">

        <SwitchPreferenceCompat
            app:key="gps_status"
            app:title="@string/gps_title"
            app:summaryOn="@string/gps_status_summary_on"
            app:summaryOff="@string/gps_status_summary_off"
            />


        <ListPreference
            app:key="language"
            app:title="@string/options_language"
            android:entries="@array/options_language_entries"
            android:entryValues="@array/options_language_values"
            android:defaultValue="en"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/filters_header">

        <EditTextPreference
            app:defaultValue="1000"
            app:key="range"
            app:dependency="gps_status"
            app:summary="@string/filters_range_summary"
            app:title="@string/filters_range" />


    </PreferenceCategory>


</PreferenceScreen>
