<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/top_bar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_bar"
        android:layout_marginTop="-1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                tools:context=".MapsActivity" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8sp"
                android:paddingTop="4sp"
                android:text="@string/title_head"
                android:textColor="#000"
                android:textSize="25sp"
                android:textStyle="bold" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/spantext"
                    android:layout_width="15dp"
                    android:layout_height="48dp"/>

                <ImageView
                    android:id="@+id/carwash_status"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="14dp"
                    android:layout_toEndOf="@+id/garage_status"
                    app:srcCompat="@drawable/carwashon" /><![CDATA[

                android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/carwash_status" />

                ]]>

                <ImageView
                    android:id="@+id/security_status"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@+id/carwash_status"
                    app:srcCompat="@drawable/securityon" />

                <ImageView
                    android:id="@+id/garage_status"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="-8dp"
                    android:layout_toEndOf="@+id/spantext"
                    app:srcCompat="@drawable/garageon" />

            </RelativeLayout>

            <TextView
                android:id="@+id/distance_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:paddingLeft="8sp"
                android:text="@string/distance_head"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8sp"
                android:text="@string/distance_head"
                android:textColor="#666"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/address_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:paddingLeft="8sp"
                android:text="@string/address_head"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8sp"
                android:text="@string/address_head"
                android:textColor="#666"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/slots_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:paddingLeft="8sp"
                android:text="@string/slots_head"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/slots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8sp"
                android:text="@string/slots_head"
                android:textColor="#666"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/price_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:paddingLeft="8sp"
                android:text="@string/price_head"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/hourly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8sp"
                android:text="@string/price_head"
                android:textColor="#666"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/threehours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8sp"
                android:text="@string/price_head"
                android:textColor="#666"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/allday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8sp"
                android:text="@string/price_head"
                android:textColor="#666"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/hours_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:paddingLeft="8sp"
                android:text="@string/hours_head"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8sp"
                android:text="@string/hours_head"
                android:textColor="#666"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/phone_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:paddingLeft="8sp"
                android:text="@string/phone_head"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8sp"
                android:text="@string/phone_head"
                android:textColor="#666"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/rating_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:paddingLeft="8sp"
                android:text="@string/rating_head"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8sp"
                android:text="@string/rating_head"
                android:textColor="#666"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/details_nav_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="8sp"
                android:layout_marginBottom="8sp"
                android:background="@color/colorPrimary"
                android:onClick="navigate"
                android:text="@string/navigation_button"
                android:textColor="#fff" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>