<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent">

    <include
        android:id="@+id/top_bar"
        layout="@layout/toolbar" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_above="@+id/big_butt"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="6dp"
        android:onClick="focusCurrLoc"
        map:srcCompat="@android:drawable/ic_menu_mylocation" />

    <Button
        android:id="@+id/big_butt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="36dp"
        android:background="@color/colorPrimary"
        android:onClick="navigateBIG"
        android:text="@string/navigation"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_bar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/Temperature"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/temprr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_bar"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/textView"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:text="0"
        tools:paddingLeft="8dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary"
        android:text="@string/Humidity"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/humid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView2"
        android:background="@color/colorPrimary"
        android:text="0"
        android:textColor="@color/white"
        tools:paddingLeft="33dp" />/>

</RelativeLayout>